# R-KV

./: LICENSE  README.md  all_results.csv  pyproject.toml  requirements.txt  run_math.py
analysis_scripts/: analysis.ipynb
evaluation/: data_loader.py  eval_math.py  model_utils.py  parser.py  requirements.txt
evaluation/aime24/: default-aime24_math_eval.jsonl  default-aime24_math_eval_cot_metrics.json
moba/: moba_efficient.py  wrapper.py
rkv/: monkeypatch.py
rkv.egg-info/: PKG-INFO  SOURCES.txt
rkv/compression/: __init__.py  r1_kv.py  snapkv.py
scripts/: eval.sh  run.sh
