[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rkv"
version = "0.1.0"
requires-python = ">=3.9"
description = "R-KV is the first production-level KV Cache Compression Method for serving R1-like models."
readme = "README.md"

[tool.setuptools]
packages = ["rkv"]
